<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    tools:context=".activities.HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logowebbrain" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usericon" />

    <TextView
        android:id="@+id/labelProfile"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="sans-serif"
        android:text="Profile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/userIcon" />

    <Button
        android:id="@+id/btnTimetable"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="103dp"
        android:backgroundTint="#082F58"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="Timetable"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:id="@+id/homeLinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:background="#33BBFF"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTimetable">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp">
                <ImageView
                    android:id="@+id/mathsImgBtn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/mathsicon" />

                <Button
                    android:id="@+id/btnMaths"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/mathsImgBtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-3dp"
                    android:backgroundTint="#082F58"
                    android:fontFamily="sans-serif"
                    android:text="@string/labelMaths"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp">
                <ImageView
                    android:id="@+id/bioImgBtn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/bioicon" />

                <Button
                    android:id="@+id/btnBio"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/bioImgBtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-3dp"
                    android:backgroundTint="#082F58"
                    android:fontFamily="sans-serif"
                    android:text="@string/labelBio"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeLinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:background="#33BBFF"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeLinearLayout01">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:outlineProvider="none">
                <ImageView
                    android:id="@+id/chemImgBtn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/chemicon" />

                <Button
                    android:id="@+id/btnChem"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/chemImgBtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-3dp"
                    android:backgroundTint="#082F58"
                    android:fontFamily="sans-serif"
                    android:text="@string/labelChemistry"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp">
                <ImageView
                    android:id="@+id/phyImgBtn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/phyicon" />

                <Button
                    android:id="@+id/btnPhy"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/phyImgBtn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-3dp"
                    android:backgroundTint="#082F58"
                    android:fontFamily="sans-serif"
                    android:text="@string/labelPhysics"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>